--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
      }
 
      h1 {
-        color: white;
+        color: black;
         text-align: center;
         font-size: 50px;
+        background-color: white;
      }
 
      p {
@@ -25,6 +26,7 @@
 
   <body>
       <h1>My Pokedex</h1>
+      <img src = "image/1722.jpg" width = "300" height="250">
       
       
   </body>
