--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     h2 {
       color: red;
       font-size: 30px;
+      text-align: center;
+      background-color: lightpink;
     }
     
     p {
@@ -41,13 +43,43 @@
   </form>
   <h2>Pokemon that catched</h2>
   <form>
-    <div class="form-group">
-      <img src="image/1722.jpg" width="300" height="250">
-      <label for="name1">Name : Snorlax</label>
-    </div>
+
+    <table style="width:100%">
+      <tr>
+        <td><img src="image/1722.jpg" width="200" height="150"></td>
+        <td>
+          <p><label for="name1">Name : Snorlax </label><br>
+            <label for="kind1">Type : Normal </label><br>
+            <label for="skill1">Skill : Lick </label><br>
+          </p>
+        </td>
+        <td><img src="image/001.png" width="200" height="150"></td>
+        <td>
+          <p><label for="name2">Name : Bulbasaur </label><br>
+            <label for="kind2">Type : Grass , Poison </label><br>
+            <label for="skill2">Skill : Vine Whip </label><br>
+          </p>
+        </td>
+      </tr>
+
+      <tr>
+        <td><img src="image/007Squirtle.png" width="200" height="150"></td>
+        <td>
+          <p><label for="name3">Name : Squirtle </label><br>
+            <label for="kind3">Type : Water </label><br>
+            <label for="skill3">Skill : Aqua Jet </label><br>
+          </p>
+        </td>
+        <td><img src="image/Charmander.png" width="200" height="150"></td>
+        <td>
+          <p><label for="name4">Name : Charmander </label><br>
+            <label for="kind4">Type : Fire </label><br>
+            <label for="skill4">Skill : Ember </label><br>
+          </p>
+        </td>
+      </tr>
+    </table>
   </form>
-
-
 
 </body>
 
