--- a/index.html
+++ b/index.html
@@ -78,6 +78,40 @@
           </p>
         </td>
       </tr>
+
+      <tr>
+        <td><img src="image/gyarados.png" width="200" height="150"></td>
+        <td>
+          <p><label for="name5">Name : Gyarados </label><br>
+            <label for="kind5">Type : Water </label><br>
+            <label for="skill5">Skill : Hydro Pump </label><br>
+          </p>
+        </td>
+        <td><img src="image/king.png" width="200" height="150"></td>
+        <td>
+          <p><label for="name6">Name : Magikarp </label><br>
+            <label for="kind6">Type : Water </label><br>
+            <label for="skill6">Skill : Splash </label><br>
+          </p>
+        </td>
+      </tr>
+
+      <tr>
+        <td><img src="image/kireu.png" width="200" height="150"></td>
+        <td>
+          <p><label for="name7">Name : Dragonite </label><br>
+            <label for="kind7">Type : Dragon </label><br>
+            <label for="skill7">Skill : Dragon Pulse </label><br>
+          </p>
+        </td>
+        <td><img src="image/pika.png" width="200" height="150"></td>
+        <td>
+          <p><label for="name8">Name : Pikachu</label><br>
+            <label for="kind8">Type : Electric </label><br>
+            <label for="skill8">Skill : Thunder </label><br>
+          </p>
+        </td>
+      </tr>
     </table>
   </form>
 
